--- a/home.html
+++ b/home.html
@@ -38,5 +38,23 @@
             <img src="Images/illustration.png">
         </div>
     </header>
+    <main>
+        <div>
+            <div>
+                <h3>Our Services</h3>
+                <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+            </div>
+            <div class="cards">
+                <div>
+                    <img>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
