--- a/home.html
+++ b/home.html
@@ -39,22 +39,50 @@
         </div>
     </header>
     <main>
+        <!-- our services div -->
         <div>
+            <!-- text div -->
             <div>
                 <h3>Our Services</h3>
                 <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
             </div>
+            <!-- cards div -->
             <div class="cards">
-                <div>
-                    <img>
+                <div class="card">
+                    <img src="Images/Frame.png">
+                    <h4>Search doctor</h4>
+                    <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="card">
+                    <img src="Images/Frame2.png">
+                    <h4>Online pharmacy</h4>
+                    <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                </div>
+                <div class="card">
+                    <img src="Images/Frame3.png">
+                    <h4>Consultation</h4>
+                    <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                </div>
+                <div class="card">
+                    <img src="Images/Frame4.png">
+                    <h4>Details info</h4>
+                    <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                </div>
+                <div class="card">
+                    <img src="Images/Frame5.png">
+                    <h4>Emergency care</h4>
+                    <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+                </div>
+                <div class="card">
+                    <img src="Images/Frame6.png">
+                    <h4>Tracking</h4>
+                    <p>Track and save your medical history and health data</p>
+                </div>
             </div>
+            <a class="button" href="#">Learn more</a>
         </div>
+        
+        
     </main>
 </body>
 </html>
