--- a/home.html
+++ b/home.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trafalgar</title>
+    
     <link href="Style/style.css" rel="stylesheet">
-    <link href="fonts/css/all.min.css" rel="stylesheet">
+    <link href="Icons/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="container">
@@ -31,48 +32,61 @@
             <div>
             <h2>Virtual healthcare for 
                 you</h2>
-            <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
+            <p>Trafalgar provides progressive, and affordable healthcare, 
+                accessible on mobile and online for everyone</p>
             <a href="#" class="button">Consult today</a>
             </div>
             <!-- text part-->
             <img src="Images/illustration.png">
         </div>
     </header>
-    <main>
         <!-- our services div -->
         <div>
             <!-- text div -->
             <div>
                 <h3>Our Services</h3>
-                <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+                <p>We provide to you the best choiches for you. Adjust it to your health 
+                    needs and make sure your undergo treatment with 
+                    our highly qualified doctors you can consult with us which 
+                    type of service is suitable for your health</p>
             </div>
             <!-- cards div -->
             <div class="cards">
+                <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame.png">
                     <h4>Search doctor</h4>
-                    <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+                    <p>Choose your doctor from thousands of specialist, 
+                        general, and trusted hospitals</p>
                 </div>
+                <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame2.png">
                     <h4>Online pharmacy</h4>
-                    <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                    <p>Buy your medicines with our mobile application 
+                        with a simple delivery system</p>
                 </div>
+                <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame3.png">
                     <h4>Consultation</h4>
                     <p>Free consultation with our trusted doctors and get the best recomendations</p>
                 </div>
+                <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame4.png">
                     <h4>Details info</h4>
-                    <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                    <p>Free consultation with our trusted doctors and get the 
+                        best recomendations</p>
                 </div>
+                <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame5.png">
                     <h4>Emergency care</h4>
-                    <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+                    <p>You can get 24/7 urgent care for yourself or your 
+                        children and your lovely family</p>
                 </div>
+                <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame6.png">
                     <h4>Tracking</h4>
@@ -84,13 +98,116 @@
         <!-- leading healthcare providers div -->
          <div class="healthcare-prov">
             <!-- text part div -->
-             <div>
+             <div class="healthcare-text">
                 <h2>Leading healthcare providers</h2>
-                <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride in the solutions we deliver</p>
-                <
+                <p>Trafalgar provides progressive, and affordable 
+                    healthcare, accessible on mobile and online for everyone. To us,
+                     it’s not just work. We take pride in the solutions we deliver</p>
+                <a class="button" href="#">Learn more</a>
              </div>
+             <img src="Images/trafalgar-illustration.png">
          </div>
-        
-    </main>
+        <!-- download our mobile apps div  -->
+         <div class="downlad-our-apps">
+            <div>
+                <h2>Download our mobile apps</h2>
+                <p>Our dedicated patient engagement app and web portal
+                     allow you to
+                     access information instantaneously 
+                    (no tedeous form, long calls, or administrative hassle) and securely</p>
+                <a class="button" href="#">Download</a>
+             </div>
+             <img src="Images/trafalgar-illustration2.png">
+            </div>
+        <!-- Testimonials div -->
+         <div>
+            <!-- blue div -->
+                <div class="testimonials">
+                <h2>What our customer are saying</h2>
+                <img src="Images/image1.png">
+             <!-- middle div -->
+             <div class="middle-saying">
+                <h5>Edward Newgate</h5>
+                <h6>Founder Circle</h6>
+              </div>
+              <p>“Our dedicated patient engagement app and web portal allow you 
+                to access information instantaneously
+                 (no tedeous form, long calls, or administrative hassle) and securely”</p>
+            </div>
+            <i class="fa-solid fa-arrow-left"></i>
+        </div>
+        <!-- our latest article div -->
+        <div class="article">
+            <h3>Check out our latest article</h3>
+            <!-- cards div -->
+            <div class="article-cards">
+                <!-- card div -->
+                <div class="a-card">
+                    <img src="Images/image2.png">
+                    <h4>Disease detection, check up in the laboratory</h4>
+                    <p>In this case, the role of the health laboratory
+                         is very important to do a disease detection...</p>
+                    <a class="button" href="#">Read more</a>
+                </div>
+                <!-- card div -->
+                <div class="a-card">
+                    <img src="Images/image3.png">
+                    <h4>Herbal medicines that are safe for consumption</h4>
+                    <p>Herbal medicine is very widely used at 
+                        this time because of its 
+                        very good for your health...</p>
+                    <a class="button" href="#">Read more</a>
+                </div>
+                <!-- card div -->
+                <div class="a-card">
+                    <img src="Images/image4.png">
+                    <h4>Natural care for healthy facial skin</h4>
+                    <p>A healthy lifestyle should start from now and 
+                        also for your skin health. There are some...</p>
+                    <a class="button" href="#">Read more</a>
+                </div>
+            </div>
+            <a href="#" class="button">View all</a>
+        </div>
+     <footer>
+        <div class="coloumn">
+            <!-- image div -->
+            <div class="image-container">
+                <img src="Images/T.png">
+                <img src="Images/Ellipse.png">
+            </div>
+            <h5>Trafalgar</h5>
+            <p>Trafalgar provides progressive, and affordable healthcare,
+                 accessible on mobile and online for everyone</p>
+            <p>©Trafalgar PTY LTD 2020. All rights reserved</p>
+        </div>
+        <div class="coloumn">
+            <h5>Company</h5>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Find a doctor</a></li>
+                <li><a href="#">Apps</a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Region</h5>
+            <ul>
+                <li><a href="#">Indonesia</a></li>
+                <li><a href="#">Singapore</a></li>
+                <li><a href="#">Hongkong</a></li>
+                <li><a href="#">Canada</a></li>
+             </ul>
+        </div>
+        <div>
+            <h5>Help</h5>
+            <ul>
+                <li><a href="#">Help center</a></li>
+                <li><a href="#">Contact support</a></li>
+                <li><a href="#">Instructions</a></li>
+                <li><a href="#">How it works</a></li>
+            </ul>
+        </div>
+     </footer>    
 </body>
 </html>
