added needed icons

--- a/home.html
+++ b/home.html
@@ -134,7 +134,16 @@
                 to access information instantaneously
                  (no tedeous form, long calls, or administrative hassle) and securely”</p>
             </div>
-            <i class="fa-solid fa-arrow-left"></i>
+            <!-- slider div -->
+            <div>
+                <i class="fa-solid fa-arrow-left"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+
         </div>
         <!-- our latest article div -->
         <div class="article">
