--- a/home.html
+++ b/home.html
@@ -137,10 +137,10 @@
             <!-- slider div -->
             <div>
                 <i class="fa-solid fa-arrow-left"></i>
-                <i class="fa-solid fa-circle"></i>
-                <i class="fa-solid fa-circle"></i>
-                <i class="fa-solid fa-circle"></i>
-                <i class="fa-solid fa-circle"></i>
+                <img src="Images/EllipseSliderDark.png">
+                <img src="Images/EllipseSliderLight.png">
+                <img src="Images/EllipseSliderLight.png">
+                <img src="Images/EllipseSliderLight.png">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
 
