--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
             </div>
             <!-- text part-->
             <img src="Images/illustration.png">
+            <img src="Images/element.png">
         </div>
     </header>
         <!-- our services div -->
