--- a/home.html
+++ b/home.html
@@ -18,18 +18,18 @@
             <!-- right div -->
             <div class="right-div">
                 <ul>
-                    <li><a href="#" class="navbar-link">Home</a></li>
-                    <li><a href="#" class="navbar-link">Find a doctor</a></li>
-                    <li><a href="#" class="navbar-link">Apps</a></li>
-                    <li><a href="#" class="navbar-link">Testimonials</a></li>
-                    <li><a href="#" class="navbar-link">About us</a></li>
+                    <li class="navbar-link"><a href="#" >Home</a></li>
+                    <li class="navbar-link"><a href="#" >Find a doctor</a></li>
+                    <li class="navbar-link"><a href="#" >Apps</a></li>
+                    <li class="navbar-link"><a href="#" >Testimonials</a></li>
+                    <li class="navbar-link"><a href="#" >About us</a></li>
                 </ul>
             </div>
         </nav>
         <!-- hero part -->
         <div class="container hero">
             <!-- text part -->
-            <div>
+            <div class="text">
             <h2>Virtual healthcare for 
                 you</h2>
             <p>Trafalgar provides progressive, and affordable healthcare, 
@@ -38,7 +38,6 @@
             </div>
             <!-- text part-->
             <img src="Images/illustration.png">
-            <img src="Images/element.png">
         </div>
     </header>
         <!-- our services div -->
