--- a/home.html
+++ b/home.html
@@ -11,12 +11,9 @@
 <body>
     <header class="container">
         <nav class="navbar">
-            <!-- left div -->
-            <div class="left-div">
-                <img src="Images/logo.svg">
-            </div>
-            <!-- right div -->
-            <div class="right-div">
+            <!--Left-->
+                <a href="#"><img src="Images/logo.svg"></a>
+            <!--Right-->
                 <ul>
                     <li class="navbar-link"><a href="#" >Home</a></li>
                     <li class="navbar-link"><a href="#" >Find a doctor</a></li>
@@ -24,10 +21,9 @@
                     <li class="navbar-link"><a href="#" >Testimonials</a></li>
                     <li class="navbar-link"><a href="#" >About us</a></li>
                 </ul>
-            </div>
         </nav>
         <!-- hero part -->
-        <div class="container hero">
+        <div class="hero">
             <!-- text part -->
             <div class="text">
             <h2>Virtual healthcare for 
