--- a/home.html
+++ b/home.html
@@ -9,8 +9,9 @@
     <link href="Icons/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <header class="container">
-        <nav class="navbar">
+    <header>
+        <section class="container">
+            <nav class="navbar">
             <!--Left-->
                 <a href="#"><img src="Images/logo.svg"></a>
             <!--Right-->
@@ -21,9 +22,10 @@
                     <li class="navbar-link"><a href="#" >Testimonials</a></li>
                     <li class="navbar-link"><a href="#" >About us</a></li>
                 </ul>
-        </nav>
+            </nav>
+        </section>
         <!-- hero part -->
-        <div class="hero">
+        <section class="container hero">
             <!-- text part -->
             <div class="text">
             <h2>Virtual healthcare for 
@@ -34,7 +36,7 @@
             </div>
             <!-- text part-->
             <img src="Images/illustration.png">
-        </div>
+        </section>
     </header>
         <!-- our services div -->
         <div>
