Healthcare Providers and some fixes

--- a/home.html
+++ b/home.html
@@ -39,12 +39,12 @@
         </section>
     </header>
         <!-- our services div -->
-        <div>
+        <div class="our-services">
             <!-- text div -->
-            <div>
-                <h3>Our Services</h3>
+            <div class="text">
+                <h3>Our services</h3>
                 <p>We provide to you the best choiches for you. Adjust it to your health 
-                    needs and make sure your undergo treatment with 
+                    needs and make sure your undergo treatment <br>with 
                     our highly qualified doctors you can consult with us which 
                     type of service is suitable for your health</p>
             </div>
@@ -61,14 +61,15 @@
                 <div class="card">
                     <img src="Images/Frame2.png">
                     <h4>Online pharmacy</h4>
-                    <p>Buy your medicines with our mobile application 
+                    <p>Buy your medicines with our <br> mobile application 
                         with a simple delivery system</p>
                 </div>
                 <!-- card div -->
                 <div class="card">
                     <img src="Images/Frame3.png">
                     <h4>Consultation</h4>
-                    <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                    <p>Free consultation with our trusted doctors 
+                        and get the best recomendations</p>
                 </div>
                 <!-- card div -->
                 <div class="card">
@@ -91,7 +92,7 @@
                     <p>Track and save your medical history and health data</p>
                 </div>
             </div>
-            <a class="button" href="#">Learn more</a>
+            <a class="button primary-button" href="#">Learn more</a>
         </div>
         <!-- leading healthcare providers div -->
          <div class="healthcare-prov">
@@ -101,7 +102,7 @@
                 <p>Trafalgar provides progressive, and affordable 
                     healthcare, accessible on mobile and online for everyone. To us,
                      it’s not just work. We take pride in the solutions we deliver</p>
-                <a class="button" href="#">Learn more</a>
+                <a class="button primary-button" href="#">Learn more</a>
              </div>
              <img src="Images/trafalgar-illustration.png">
          </div>
