--- a/home.html
+++ b/home.html
@@ -97,18 +97,18 @@
         <!-- leading healthcare providers div -->
          <div class="healthcare-prov">
             <!-- text part div -->
-             <div class="healthcare-text">
+             <img src="Images/trafalgar-illustration.png">
+             <div class="text">
                 <h2>Leading healthcare providers</h2>
                 <p>Trafalgar provides progressive, and affordable 
                     healthcare, accessible on mobile and online for everyone. To us,
                      it’s not just work. We take pride in the solutions we deliver</p>
                 <a class="button primary-button" href="#">Learn more</a>
              </div>
-             <img src="Images/trafalgar-illustration.png">
          </div>
         <!-- download our mobile apps div  -->
          <div class="downlad-our-apps">
-            <div>
+            <div class="text">
                 <h2>Download our mobile apps</h2>
                 <p>Our dedicated patient engagement app and web portal
                      allow you to
