Finished Download our App

--- a/home.html
+++ b/home.html
@@ -107,14 +107,14 @@
              </div>
          </div>
         <!-- download our mobile apps div  -->
-         <div class="downlad-our-apps">
+         <div class="download-our-apps">
             <div class="text">
                 <h2>Download our mobile apps</h2>
                 <p>Our dedicated patient engagement app and web portal
                      allow you to
                      access information instantaneously 
                     (no tedeous form, long calls, or administrative hassle) and securely</p>
-                <a class="button" href="#">Download</a>
+                <a class="button primary-button" href="#">Download <i class="fa-solid fa-arrow-down"></i></a>
              </div>
              <img src="Images/trafalgar-illustration2.png">
             </div>
