--- a/home.html
+++ b/home.html
@@ -119,28 +119,33 @@
              <img src="Images/trafalgar-illustration2.png">
             </div>
         <!-- Testimonials div -->
-         <div>
-            <!-- blue div -->
-                <div class="testimonials">
-                <h2>What our customer are saying</h2>
-                <img src="Images/image1.png">
-             <!-- middle div -->
-             <div class="middle-saying">
-                <h5>Edward Newgate</h5>
-                <h6>Founder Circle</h6>
-              </div>
-              <p>“Our dedicated patient engagement app and web portal allow you 
-                to access information instantaneously
-                 (no tedeous form, long calls, or administrative hassle) and securely”</p>
-            </div>
+         <div class="whole-testimonials">
+                <div class="blue-testimonials">
+                     <!-- header -->
+                     <h2>What our customer are saying</h2>
+                    <!-- founder div -->
+                        <div class="founder">
+                            <img src="Images/image1.png">
+                            <div class="founder-text">
+                                <h5>Edward Newgate</h5>
+                                <h6>Founder Circle</h6>
+                            </div>
+                            <p>“Our dedicated patient engagement app and web portal allow you 
+                            to access information instantaneously
+                             (no tedeous form, long calls, or administrative hassle)
+                              and securely”</p>
+                        </div>
+                </div>
             <!-- slider div -->
-            <div>
-                <i class="fa-solid fa-arrow-left"></i>
-                <img src="Images/EllipseSliderDark.png">
-                <img src="Images/EllipseSliderLight.png">
-                <img src="Images/EllipseSliderLight.png">
-                <img src="Images/EllipseSliderLight.png">
-                <i class="fa-solid fa-arrow-right"></i>
+            <div class="slider">
+                <div class="elements">
+                    <a href="#"><i class="fa-solid fa-arrow-left-long"></i></a>
+                    <img src="Images/EllipseSliderDark.png">
+                    <img src="Images/EllipseSliderLight.png">
+                    <img src="Images/EllipseSliderLight.png">
+                    <img src="Images/EllipseSliderLight.png">
+                    <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
+                </div>
             </div>
 
         </div>
