semi-finished article

--- a/home.html
+++ b/home.html
@@ -157,30 +157,41 @@
                 <!-- card div -->
                 <div class="a-card">
                     <img src="Images/image2.png">
-                    <h4>Disease detection, check up in the laboratory</h4>
-                    <p>In this case, the role of the health laboratory
-                         is very important to do a disease detection...</p>
-                    <a class="button" href="#">Read more</a>
+                    <div class="card-text">
+                        <h4>Disease detection, check up in the laboratory</h4>
+                        <p>In this case, the role of the health laboratory
+                         is very important to do<br> a disease detection...</p>
+                        <a  href="#" id="link">Read more <i class="fa-solid
+                             fa-arrow-right-long">
+                        </i>
+                        </a>
+                    </div>
                 </div>
                 <!-- card div -->
                 <div class="a-card">
                     <img src="Images/image3.png">
-                    <h4>Herbal medicines that are safe for consumption</h4>
-                    <p>Herbal medicine is very widely used at 
+                    <div class="card-text">
+                        <h4>Herbal medicines that are safe for consumption</h4>
+                         <p>Herbal medicine is very widely used at 
                         this time because of its 
                         very good for your health...</p>
-                    <a class="button" href="#">Read more</a>
+                        <a  href="#" id="link">Read more <i class="fa-solid 
+                            fa-arrow-right-long"></i></a>
+                    </div>
                 </div>
                 <!-- card div -->
                 <div class="a-card">
                     <img src="Images/image4.png">
-                    <h4>Natural care for healthy facial skin</h4>
-                    <p>A healthy lifestyle should start from now and 
+                    <div class="card-text">
+                        <h4>Natural care for healthy facial skin</h4>
+                        <p>A healthy lifestyle should start from now and 
                         also for your skin health. There are some...</p>
-                    <a class="button" href="#">Read more</a>
+                        <a  href="#" id="link">Read more <i class="fa-solid 
+                            fa-arrow-right-long"></i></a>
+                    </div>
                 </div>
             </div>
-            <a href="#" class="button">View all</a>
+            <a href="#">View all</a>
         </div>
      <footer>
         <div class="coloumn">
