--- a/home.html
+++ b/home.html
@@ -191,21 +191,19 @@
                     </div>
                 </div>
             </div>
-            <a href="#">View all</a>
+            <a href="#" class="button primary-button">View all</a>
         </div>
      <footer>
-        <div class="coloumn">
-            <!-- image div -->
-            <div class="image-container">
-                <img src="Images/T.png">
-                <img src="Images/Ellipse.png">
+        <div class="coloumn col-one">
+            <div class="logo">
+                <span class="img-bg"><img src="Images/T.svg"></span>
+                <h5>Trafalgar</h5>
             </div>
-            <h5>Trafalgar</h5>
             <p>Trafalgar provides progressive, and affordable healthcare,
-                 accessible on mobile and online for everyone</p>
-            <p>©Trafalgar PTY LTD 2020. All rights reserved</p>
+                 accessible on mobile and online<br> for everyone</p>
+            <p id="citation">©Trafalgar PTY LTD 2020. All rights reserved</p>
         </div>
-        <div class="coloumn">
+        <div class="coloumn col-two">
             <h5>Company</h5>
             <ul>
                 <li><a href="#">About</a></li>
@@ -214,7 +212,7 @@
                 <li><a href="#">Apps</a></li>
             </ul>
         </div>
-        <div>
+        <div class="coloumn col-three">
             <h5>Region</h5>
             <ul>
                 <li><a href="#">Indonesia</a></li>
@@ -223,7 +221,7 @@
                 <li><a href="#">Canada</a></li> 
              </ul>
         </div>
-        <div>
+        <div class="coloumn col-four">
             <h5>Help</h5>
             <ul>
                 <li><a href="#">Help center</a></li>
