--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
             <div class="text">
                 <h3>Our services</h3>
                 <p>We provide to you the best choiches for you. Adjust it to your health 
-                    needs and make sure your undergo treatment <br>with 
+                    needs and make sure your undergo treatment with 
                     our highly qualified doctors you can consult with us which 
                     type of service is suitable for your health</p>
             </div>
