Removed unnecessary files

--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
                     <div class="card-text">
                         <h4>Disease detection, check up in the laboratory</h4>
                         <p>In this case, the role of the health laboratory
-                         is very important to do<br> a disease detection...</p>
+                         is very important to do a disease detection...</p>
                         <a  href="#" id="link">Read more <i class="fa-solid
                              fa-arrow-right-long">
                         </i>
